# gish

./: .gitignore  CMakeLists.txt  CMakePresets.json  main.c
game/: music.h
